--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc && yarn lint && yarn test",
+    "build": "tsc && yarn lint",
     "prepare": "yarn build",
     "prepublishOnly": "yarn test && yarn lint",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
-    "@types/node": "^10.5.4",
+    "@types/node": "^12.0.10",
     "jest": "^23.4.1",
     "prettier": "^1.14.0",
     "ts-jest": "^23.0.1",
